@@ -1,3 +1,11 @@
+2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCClospre.hpp,
+	  src/SDCClospre.cc:
+	  Preparations for lospre.
+	* src/z80/gen.c:
+	  More verbose debugging for variables that are not in registers, but should be.
+
 2012-05-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/scripts/sdcc.nsi: added r3ka and s08 to installer
